...
              gap: 10,
            }}
          >
            <TouchableOpacity
              onPress={handleCloseSheet}
              style={NavigationBottomSheetStyles.closeIcon}
              testID="close-navigation"
              accessibilityLabel="Close navigation"
              accessibilityRole="button"
            >
              <CloseIcon size={28} />
            </TouchableOpacity>
          </View>
...
