...

  const getStepperButtonText = () => {
    if ((isLastStep && willBeFollowedByIndoorNavigation) || isSolelyIndoors)
      return "Continue indoors";

    if (isLastStep) {
      return "Finish";
    }
    return "Next step";
  };

  const renderIndoorOnlyStep = () => {
    return (
      <View>
        <Text
...
