...
      </View>
    );
  };
  return (
    <View>
      <View style={styles.sectionContainer}>
        <Text style={styles.sectionTitle}>Steps</Text>
        {!props.directions && renderNoDirectionsMessage()}
        {props.directions && (
          <View>
            {props.directions.steps.map((step: StepModel, index) => {
              return (
                <View key={step.polyline + index} style={styles.stepContainer}>
...
